Fixed coloration on notifications being too light.

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -407,7 +407,7 @@ main > .row {
 /* NOTIFICATIONS *********************************************************************************/
 
 .notifications-table .unread, .notifications-table .unread td {
-    background-color: #fffdf0;
+    background-color: #2b5c61;
 }
 
 /* BROWSE ****************************************************************************************/
